[package]
name = "calendar-connect"
version = "0.1.0"
authors = ["shnaky <mail@shnaky.com>"]
edition = "2018"

[dependencies]
google-calendar3 = "*"
yup-oauth2 = "^1.0"
hyper = "^0.10"
hyper-rustls = "^0.6"
serde_json = "1"
serde = "1"
serde_derive = "1"
reqwest = "0.9.19"
select = "0.4.3"
chrono = "0.4.7"